done Vectors and Data frames section

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview 
 
-This chapter will be centered around tools for cleaning and wrangling data. Again, this will be in the context of a real world Data Science application and we will continue to practice working through a whole case study
+This chapter will be centered around tools for cleaning and wrangling data to move data from its raw format into a format that is suitable for data analysis. This will be in the context of a real world Data Science application and we will continue to practice working through a whole case study.
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
@@ -23,43 +23,40 @@ By the end of the chapter, students will be able to:
 
 ## Vectors and Data frames
 
-At this point, we know how to load flat, tabular data files into R using the `tidyverse` functions. When we do this, the data is represented in R as a data frame object. So now, we will spend some time learning more about these types of objects in R and what they are made up of so that we have a better understanding of how we can use and manipulate these objects.
+At this point, we know how to load data into R from various file formats. Once loaded into R, all the tools we have learned about for reading data into R represent the data as a data frame. So now, we will spend some time learning more about data frames in R and what they are made up of so that we have a better understanding of how we can use and manipulate these objects.
 
 ### What is a data frame?
 
 Let's first start by defining exactly what a data frame is. From a data perspective, it is a rectangle where the rows are the observations.
 
-![](img/obs.jpeg)
+<img src="img/obs.jpeg" width="650">
 
-And the columns are the variables. Data frames in R are built-in, base R objects.
+And the columns are the variables:
 
-![](img/vars.jpeg)
+<img src="img/vars.jpeg" width="650">
 
-From a computer science type/object perspective, in R, a data frame is a special sub-type of a list object whose elements (columns) are vectors.
 
-![](img/vectors.jpeg)
+From a computer programming perspective, in R, a data frame is a special sub-type of a list object whose elements (columns) are vectors. In the data frame below, the data frame has 3 elements that are vectors whose names are `state`, `year` and `population`.
+
+<img src="img/vectors.jpeg" width="650">
 
 ### What is a vector?
 
-In R, vectors are objects that can contain 1 or more elements. The vector elements are ordered, and they must all be of the same type. They are also mutable. Vectors are also built-in, base R objects.
+In R, vectors are objects that can contain 1 or more elements. The vector elements are ordered, and they must all be of the same type. Common example types of vectors are character (e.g., letter or words), numeric (whole numbers and fractions) and logical (e.g., `TRUE` or `FALSE`). In the vector shown below the elements are of numeric type:
 
-![](img/vector.jpeg)
+<img src="img/vector.jpeg" width="600">
 
 ### How are vectors different from a list?
 
-Vectors and lists differ by the requirement of element type consistency. All elements within a single vector must be of the same type (e.g., all elements are strings), whereas elements within a single list can be of different types (e.g., strings and numbers can be elements in the same list).
+Lists are also objects in R that have multiple elements. Vectors and lists differ by the requirement of element type consistency. All elements within a single vector must be of the same type (e.g., all elements are numbers), whereas elements within a single list can be of different types (e.g., characters, numbersl logicals and even other lists can be elements in the same list).
 
-![](img/vec_vs_list.jpeg)
+<img src="img/vec_vs_list.jpeg" width="600">
 
 ### What does this have to do with data frames?
 
-As mentioned earlier, data frames are really specialized lists of vectors that allow us to easily work with our data in a rectangular/spreadsheet like manner. This allows us have columns/vectors of different characteristics associated/linked in one object similar to a table in a database.
+As mentioned earlier, data frames are really a special type of list objects where the elements are only vectors. Representing data with such an object as this allow us to easily work with our data in a rectangular/spreadsheet like manner. This allows us have columns/vectors of different characteristics associated/linked in one object. This is similar to a table in a spreadsheet or a database.
 
-![](img/dataframe.jpeg)
-
-## The `dplyr` functions
-
-We haven't explicitly said this yet, but the `tidyverse` is actually a meta R package that installs a collection of R packages that all follow the tidy data philosophy (more on this below). One of the tidyverse packages is `dplyr` - a data wrangling workhorse. You have already met 3 of the dplyr function (`select`, `filter` and `mutate`). To learn more about those three and meet a few more useful ones, read the post at this link: http://stat545.com/block010_dplyr-end-single-table.html#where-were-we
+<img src="img/dataframe.jpeg" width="650">
 
 ## Tidy Data
 
@@ -252,6 +249,11 @@ gather(hist_vote_messy,
 19          1984 runnerup Walter Mondale  Dem  
 20          1980 runnerup Jimmy Carter    Dem  
 ```
+
+## The `dplyr` functions
+
+We haven't explicitly said this yet, but the `tidyverse` is actually a meta R package that installs a collection of R packages that all follow the tidy data philosophy (more on this below). One of the tidyverse packages is `dplyr` - a data wrangling workhorse. You have already met 3 of the dplyr function (`select`, `filter` and `mutate`). To learn more about those three and meet a few more useful ones, read the post at this link: http://stat545.com/block010_dplyr-end-single-table.html#where-were-we
+
 
 ## Using `purrr`'s `map*` functions to iterate
 
