minor typo in reading chp

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -105,7 +105,7 @@ case where the defaults hold and the only argument we need to give to the functi
 We put `data/` before the name of the file when we are loading the dataset because this dataset is located in a sub-folder, named `data`, 
 relative to where we are running our R code.
 
-Here is what the file would look in plain text editor:
+Here is what the file would look in a plain text editor:
 
 ```{bash, echo=FALSE, comment=NA}
 head -n 10 data/state_property_vote.csv
@@ -145,7 +145,7 @@ us_data
 
 When our tabular data comes in a different format, we can use the `read_delim` function instead. For example, a different version of this same dataset has no column names and uses tabs as the delimiter instead of commas. 
 
-Here is how the file would look in plain text editor:
+Here is how the file would look in a plain text editor:
 
 ```{bash, echo=FALSE, comment=NA}
 head -n 10 data/state_property_vote.tsv
