minor ed to subsec title and rebuild

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -22,13 +22,21 @@ are external references that contain a wealth of additional information on the t
     - histogram plots
 - Given a dataset and a question, select from the above plot types to create a visualization that best answers the question
 - Given a visualization and a question, evaluate the effectiveness of the visualization and suggest improvements to better answer the question
-- List rules of thumb for creating effective visualizations 
-- Use the `ggplot2` library in R to create the above visualizations
+- Identify rules of thumb for creating effective visualizations 
 - Define the three key aspects of ggplot objects:
-     - aesthetic mappings
-     - geometric objects
-     - scales
-- Describe the difference in raster and vector output formats, and use `ggsave` to save visualizations
+    - aesthetic mappings
+    - geometric objects
+    - scales
+- Use the `ggplot2` library in R to create and refine the above visualizations using:
+    - geometric objects: `geom_point`, `geom_line`, `geom_histogram`, `geom_bar`, `geom_vline`, `geom_hline`
+    - scales: `scale_x_continuous`, `scale_y_continuous`
+    - aesthetic mappings: `x`, `y`, `fill`, `colour`, `shape`
+    - labelling: `xlab`, `ylab`, `labs`
+    - font control and legend positioning: `theme`
+    - flipping axes: `coord_flip`
+    - subplots: `facet_grid`
+- Describe the difference in raster and vector output formats
+- Use `ggsave` to save visualizations in `.png` and `.svg` format
 
 ## Choosing the visualization
 #### *Ask a question, and answer it* {-#my-section}
@@ -58,6 +66,7 @@ You should also not use **3-D visualizations**, as they are typically hard to un
 do not use tables to make numerical comparisons; humans are much better at quickly processing visual information than text and math. Bar plots are 
 again typically a better alternative.
 
+
 ## Refining the visualization
 #### *Convey the message, minimize noise* {-#my-section}
 
@@ -86,7 +95,9 @@ as much as possible.
 - Only make the plot area (where the dots, lines, bars are) as big as needed. Simple plots can be made small.
 - Don't adjust the axes to zoom in on small differences. If the difference is small, show that it's small!
 
-## Examples
+
+## Creating visualizations with `ggplot2` 
+#### *Build the visualization iteratively* {-#my-section}
 
 This section will cover examples of how to choose and refine a visualization given a dataset and a question that you want to answer, 
 and then how to create the visualization in R using `ggplot2`.
