added note about hline / vline

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -325,7 +325,8 @@ print(morley_hist)
 
 This is a great start. However, we cannot tell how accurate the measurements are using this visualization unless we can see what the true value is.
 In order to visualize the true speed of light, we will add a vertical line with the `geom_vline` geometric object, setting the `xintercept` argument
-to the true value:
+to the true value. There is a similar geometric object, `geom_hline`, that is used for plotting horizontal lines. Note that *vertical lines*
+are used to denote quantities on the *horizontal axis*, while *horizontal lines* are used to denote quantities on the *vertical axis*. 
 
 ```{r 03-data-morley-hist-2}
 morley_hist <- ggplot(morley, aes(x = Speed)) + 
