added a section to emphasize 'tidiness' being a matter of what you consider your observations and variables to be

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -95,10 +95,8 @@ Tidy data satisfy the following three criteria:
 
 ### Why is tidy data important in R?
 
-First, there are many well designed `tidyverse` data cleaning/wrangling tools to help you easily tidy your data. Second, 
-one of the most popular plotting toolsets in R, the `ggplot2` library, expects the data to be in a tidy format. Third, most statistical 
-analysis functions expect data in tidy format. Given that all of these tasks are central in virtually any data analysis 
-project, it is well worth spending the time to get your data into a tidy format up front. Let's explore how we can do this in R.
+First, one of the most popular plotting toolsets in R, the `ggplot2` library, expects the data to be in a tidy format. Second, most statistical analysis functions expect data in tidy format. Given that both of these tasks are central in virtually any data analysis 
+project, it is well worth spending the time to get your data into a tidy format up front. Luckily there are many well designed `tidyverse` data cleaning/wrangling tools to help you easily tidy your data. Let's explore them now!
 
 ### Going from wide to long (or tidy!) using `gather`
 
@@ -202,6 +200,10 @@ ggplot(hist_vote_party_tidy, aes(x = result, fill = party)) +
 
 From this visualization, we can see that between 1980 - 2016 (inclusive) the Republican party has 
 won more US Presidential elections than the Democratic party.
+
+### Notes on defining tidy data
+
+Is there only one shape for tidy data for a given data set? Not necessarily, it depends on the statistical question you are asking and what the variables are for that question. For tidy data, each variable should be its own column. So just as its important to match your statistical question with the appropriate data analysis tool (classification, clustering, hypothesis testing, etc). It's important to match your statistical question with the appropriate variables and ensure they are each represented as individual columns to make the data tidy.
 
 ## Combining functions using the pipe operator, `%>%`:
 
