--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -84,7 +84,7 @@ as much as possible.
 - Make sure the data are clearly visible; don’t hide the shape/distribution of the data behind other objects (e.g. a bar).
 - Make sure to use colourschemes that are understandable by those with colourblindness (a surprisingly large fraction of the 
   overall population). For example, [colorbrewer.org](https://colorbrewer.org)
-  has a tool to pick such colourschemes, and you can check your visualizations after
+  and the `RColorBrewer` R library provide the ability to pick such colourschemes, and you can check your visualizations after
   you have created them by uploading to online tools such as the [colour blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
 
